SignatureCountSlider: prevent cut off input

--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -13,7 +13,7 @@
 .textInput {
     margin-left: 1rem;
     font-size: @fontSizeL;
-    width: 5rem;
+    width: 5.5rem;
 }
 
 // DA SLIDER 👇
